Fix hero gap

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body > div {
     display: flex;
     padding-top: 100px;
     padding-bottom: 100px;
+    gap: 25px;
 }
 
 .hero-text {
